Fixed overflow-x

--- a/eLog/public/css/app.css
+++ b/eLog/public/css/app.css
@@ -1,3 +1,8 @@
+body>div
+{
+    overflow-x: hidden;
+}
+
 .nav-bar-logo
 {
     width: 30%;
